Bug Fix - Layout issue overflow on remote screen

--- a/client/src/less/modules/remote.less
+++ b/client/src/less/modules/remote.less
@@ -5,7 +5,7 @@ section[role="region"] .remote {
 
 section[role="region"] .remote .shortcuts,
 section[role="region"] .remote .sound {
-  margin : 1rem;
+  margin : 1rem 0;
   position: relative;
   padding-bottom : 1rem;
   .box-sizing;
@@ -66,8 +66,8 @@ section[role="region"] .remote .row {
 
 section[role="region"] .remote .navigation {
   height : calc(100/5*3% - 1rem);
-  margin : 0 3rem;
-  
+  padding : 0 3rem;
+  .box-sizing;
 } 
 section[role="region"] .remote .navigation .row {
   display : block;
